--- a/client/views/status_bar.html
+++ b/client/views/status_bar.html
@@ -9,12 +9,16 @@
   <div class="players">
     {{#each players}}
     <div class="player{{#if myTurn}} current-player{{/if}}">
-      <img src="{{avatar}}" />
-      <div class="username">{{username}}</div>
-      <div class="stacks">
-        {{#each stacks}}
-        <div class="count">{{count}}</div>
-        {{/each}}
+      <div class="left">
+        <img src="{{avatar}}" />
+      </div>
+      <div class="right">
+        <div class="username">{{username}}</div>
+        <div class="stacks">
+          {{#each stacks}}
+          <div class="count">{{count}}</div>
+          {{/each}}
+        </div>
       </div>
     </div>
     {{/each}}
