--- a/client/styles/application.styl
+++ b/client/styles/application.styl
@@ -13,6 +13,22 @@ body
   background: #fff
   font-family: sans-serif
 
+h1
+  font-size: 3em
+h2
+  font-size: 2.3em
+h3
+  font-size: 1.7em
+h4
+  font-size: 1.3em
+
+p
+  margin: 0.4em 0 0.8em
+
+.align-right
+  text-align: right
+
+
 header
     background-color: #999
     padding: 15px
@@ -44,6 +60,12 @@ header
   width: 100%
   max-width: 100%
   overflow: hidden
+
+@media (max-width: 767px)
+  input
+    font-size: 2em
+    padding: 0.5em 0.9em !important
+
 
 
 
@@ -103,46 +125,47 @@ header
   body
     font-size: 15px
 /* Tablet em */
+
 /* Phone em */
 @media (max-width: 320px)
   body
-    font-size: 8px
+    font-size: 9px
 @media (min-width: 321px) and (max-width: 360px)
   body
-    font-size: 9px
+    font-size: 10px
 @media (min-width: 361px) and (max-width: 400px)
   body
-    font-size: 10px
+    font-size: 11px
 @media (min-width: 401px) and (max-width: 440px)
   body
-    font-size: 11px
+    font-size: 12px
 @media (min-width: 441px) and (max-width: 480px)
   body
-    font-size: 12px
+    font-size: 13px
 @media (min-width: 481px) and (max-width: 520px)
   body
-    font-size: 13px
+    font-size: 14px
 @media (min-width: 521px) and (max-width: 560px)
   body
-    font-size: 14px
+    font-size: 15px
 @media (min-width: 561px) and (max-width: 600px)
   body
-    font-size: 15px
+    font-size: 16px
 @media (min-width: 601px) and (max-width: 640px)
   body
-    font-size: 16px
+    font-size: 17px
 @media (min-width: 641px) and (max-width: 680px)
   body
-    font-size: 17px
+    font-size: 18px
 @media (min-width: 681px) and (max-width: 720px)
   body
-    font-size: 18px
+    font-size: 19px
 @media (min-width: 721px) and (max-width: 760px)
   body
-    font-size: 19px
+    font-size: 20px
 @media (min-width: 761px) and (max-width: 767px)
   body
-    font-size: 20px
+    font-size: 21px
 /* Phone em */
 
 /* Tablet em */
