--- a/client/views/game.html
+++ b/client/views/game.html
@@ -17,6 +17,37 @@
         {{> hand}}
       </div>
     </div>
+    {{#if showOverlay}}
+    <div class="overlay">
+      <div class="overlay-popup">
+        {{#if underAttack}}
+          {{> defense}}
+        {{else}}
+          {{#if waitingForDefense}}
+            {{> wait_for_defense}}
+          {{/if}}
+        {{/if}}
+        {{#if confirmPlayingWeapon}}
+          {{> confirm_playing_weapon}}
+        {{/if}}
+        {{#if confirmPlayingSpell}}
+          {{> confirm_playing_spell}}
+        {{/if}}
+        {{#if energyRequired}}
+          {{> energy_required}}
+        {{/if}}
+        {{#if selectOpponents}}
+          {{> select_opponents}}
+        {{/if}}
+        {{#if selectCardsFromHand}}
+          {{> select_cards_from_hand}}
+        {{/if}}
+        {{#if showMyInfo}}
+          {{> my_info}}
+        {{/if}}
+      </div>
+    </div>
+    {{/if}}
   {{else}}
     {{> players}}
   {{/if}}
