--- a/client/views/objects/confirm_playing_weapon.html
+++ b/client/views/objects/confirm_playing_weapon.html
@@ -9,7 +9,7 @@
       Range: {{range}}
     </p>
     <p>
-      <input type="button" class="btn btn-success play-it" value="{{#if enoughEnergy}}Play it!{{else}}Not enough energy{{/if}}" {{#unless enoughEnergy}}disabled{{/unless}} />
+      <input type="button" class="btn btn-success play-it" value="Play it!" />
       <input type="button" class="btn cancel" value="Cancel" />
     </p>
   {{/with}}
