make it look mo betta

--- a/client/styles/application.styl
+++ b/client/styles/application.styl
@@ -56,7 +56,7 @@ header
     font-size: 16pt
 
 .outer-container
-  position: absolute
+  //position: absolute
   width: 100%
   max-width: 100%
   overflow: hidden
