--- a/client/styles/game_page.styl
+++ b/client/styles/game_page.styl
@@ -54,14 +54,16 @@
     font-size: 32px
   h2
     font-size: 24px
+.landscape-mode
+  height: 100%
 .game-page
   position: absolute
   width: 100%
-  height: 100%
   transform-origin: 0 0
   .map-holder
     width: 100%
   .game-board
+    position: absolute
     transform-origin: 0 0
     .game-tile, tile
       position: absolute
@@ -105,6 +107,8 @@
         background: rgba(0,0,0,0.3)
         transform-origin: 100% 100%
       .cards
+        position: absolute
+      .playing-card
         position: absolute
     .crystals-stack-0
       left: 0
@@ -153,13 +157,18 @@
   transition: transform 0.6s ease
 .hand-holder, .crystals-holder, .map-holder
   position: absolute
+.portrait-mode
+  .hand-holder, .crystals-holder, .map-holder
+    position: static
+  .view-btn
+    display: none
 
-.view-hand
+.landscape-mode.view-hand
   .map-holder, .crystals-holder
     transform: translate3d(-100%, 0px, 0px)
-.view-crystals
+.landscape-mode.view-crystals
   .map-holder, .hand-holder
     transform: translate3d(-100%, 0px, 0px)
-.view-map
+.landscape-mode.view-map
   .hand-holder, .crystals-holder
     transform: translate3d(-100%, 0px, 0px)
