--- a/client/views/status_bar.html
+++ b/client/views/status_bar.html
@@ -1,8 +1,10 @@
 <template name="status_bar">
-  <div><input type="button" value="End Turn" class="btn btn-small end-turn" /></div>
-  <input type="button" value="View Map" class="btn btn-small view-map-btn" />
-  <input type="button" value="View Hand" class="btn btn-small view-hand-btn" />
-  <input type="button" value="View Crystals" class="btn btn-small view-crystals-btn" />
+  {{#unless spectator}}
+  <div><input type="button" value="End Turn" class="btn btn-small end-turn" {{#unless isMyTurn}}disabled{{/unless}}/></div>
+  <input type="button" value="View Map" class="btn btn-small view-btn view-map-btn" />
+  <input type="button" value="View Hand" class="btn btn-small view-btn view-hand-btn" />
+  <input type="button" value="View Crystals" class="btn btn-small view-btn view-crystals-btn" />
+  {{/unless}}
   {{#if isMyTurn}}
     ENERGY: {{currentTurnEnergy}} / {{totalAvailableEnergy}}
   {{/if}}
