remove transitions when not in a transitionable mode

--- a/client/styles/game_page.styl
+++ b/client/styles/game_page.styl
@@ -153,8 +153,10 @@
   height: 0px
   line-height: 0
   clear: both
-.game-page, .hand-holder, .crystals-holder, .map-holder
-  transition: transform 0.6s ease
+
+.landscape-mode
+  .game-page, .hand-holder, .crystals-holder, .map-holder
+    transition: transform 0.6s ease
 .hand-holder, .crystals-holder, .map-holder
   position: absolute
 .portrait-mode
