--- a/client/styles/game_page.styl
+++ b/client/styles/game_page.styl
@@ -14,7 +14,7 @@
     height: 3em
   .player
     float: left
-    margin: 0 1em 0.2em
+    margin: 0 0 0.2em 0.5em
     img
       display: block
       float: left
@@ -27,6 +27,7 @@
       font-weight: bold
       color: #000
   .stacks
+    font-size: 0.8em
     white-space: nowrap
     .count
       display: inline-block
@@ -87,8 +88,8 @@
       transform: translate3d(0px, 0px, 0px)
       float: left
       background-color: #006599
-      border-left: solid 1px #fff
-      border-right: solid 1px #fff
+      border-left: solid 1px #f3f3f3
+      border-right: solid 1px #f3f3f3
       width: 14.2em
       height: 22.3em
       .label
