--- a/client/styles/player_setup.styl
+++ b/client/styles/player_setup.styl
@@ -9,6 +9,7 @@
     font-size: 1.8em
     .preview-container
       max-width: 18em
+      margin: 0 auto
     .top, .bottom
       font-size: 3em
     .player-preview
