big inputs on signup form

--- a/client/views/main.html
+++ b/client/views/main.html
@@ -80,7 +80,7 @@
 </template>
 
 <template name="signup">
-  <div class="signup">
+  <div class="signup big-input">
     <form class="signup-form">
       <p>
         <input type="text" class="username" name="username" placeholder="Enter Name" value="{{username}}" />
