--- a/client/views/players.html
+++ b/client/views/players.html
@@ -32,7 +32,7 @@
       {{/if}}
     {{else}}
       <div class="overlay">
-        <div class="overlay-popup signup big-input">
+        <div class="overlay-popup signup">
           <h1>Sign in to play!</h1>
           {{> signup}}
         </div>
