clean up some stuff

--- a/client/views/main.html
+++ b/client/views/main.html
@@ -34,7 +34,7 @@
   {{/if}}
   
   {{#if gameLoading}}
-    {{> loading}}.....
+    {{> loading}}
   {{else}}
     {{#if showGame}}
       {{> game}}
