--- a/client/views/objects/hand.html
+++ b/client/views/objects/hand.html
@@ -1,6 +1,6 @@
 <template name="hand">
   <div class="hand">
-    <h1>H</h1>
+    <h1 class="white">Your hand</h1>
     <div class="cards">
       {{#isolate}}
       {{#each hand.cards}}
